2005-06-01  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-set-gud-minor-mode-1)
	(gdb-info-breakpoints-custom, gdb-delete-breakpoint)
	(gdb-goto-breakpoint, gdb-source-info, gdb-get-location)
	(gdb-assembler-custom): Improve regexps.
	(def-gdb-auto-update-handler): Use window point to ensure it
	is preserved.

2005-05-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* thumbs.el (thumbs-mode): Fix misuse of make-variable-buffer-local.

2005-05-31  Jay Belanger  <belanger@truman.edu>

	* calc/calc-embed.el (calc-embedded-word): Change argument passed
	to calc-embedded.
	(calc-embedded-make-info): Have plain prefix argument select
	entire line.

2005-05-31  Juanma Barranquero  <lekktu@gmail.com>

	* faces.el (list-faces-display): Signal error if passed a regexp
	that matches no face name.

	* simple.el (filter-buffer-substring): Fix typo in docstring.

2005-05-31  Richard M. Stallman  <rms@gnu.org>

	* progmodes/vhdl-mode.el (vhdl-fill-region): Test ARG, not INTERACTIVE.
	(vhdl-emacs-21): Doc fix.
	(vhdl-mode): Unconditionally set comment-padding.
	(vhdl-fixup-whitespace-region): Insert spaces only where
	there are none.
	(vhdl-statistics-buffer): Make the Emacs 21 behavior universal.

2005-05-30  John Wiegley  <johnw@newartisans.com>

	* eshell/em-cmpl.el, eshell/em-dirs.el, eshell/em-glob.el
	* eshell/em-unix.el, eshell/esh-ext.el, eshell/esh-io.el
	* eshell/esh-util.el, eshell/esh-var.el: Change all uses of
	`directory-sep-char' to ?/, and all uses of `string-to-int' to
	`string-to-number'.

2005-05-30  Jay Belanger  <belanger@truman.edu>

	* calc/calc.el (calc-bug-address): Fix docstring.
	(calc-window-hook, calc-trail-window-hook): New variables.
	(calc-trail-display): Restore use of calc-trail-window-hook.
	(calc): Restore use of calc-window-hook.

2005-05-31  Masatake YAMATO  <jet@gyve.org>

	* emacs-lisp/find-func.el (find-function-noselect): Handle subroutines.

	* help-fns.el (help-C-file-name): Add autoload mark for